@@ -1284,6 +1284,9 @@ work on earlier versions of \Matlab, but there is also a good chance that it
 will not. It is unlikely that the software will run with versions prior to 
 \Matlab 6.5.
 
+\textbf{NOTE}: The \Matlab interface \textbf{does not support \Matlab 8.3} (aka, R2014a), as
+it has not been adapted to \Matlab changes in the buildsystem for MEX files.
+
 First, note that some binaries of \Ipopt\ {\tt mex} files are available for download at
 \url{http://www.coin-or.org/download/binary/Ipopt}.
 Further, the OPTI Toolbox (\url{http://www.i2c2.aut.ac.nz/Wiki/OPTI}) comes with a 
